crates/tui/snapshots/fullscreen/marketplace/marketplace_sources_collapsed.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Extensions ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Marketplace    MCP    Hooks    Plugins                      │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> ash                                                                  + │             
            │  claude-plugins-official                                              - │             
            │  Plugins ────────────────────────────────────────────────────────────── │             
            │  Tools                                                                + │             
            │  openai                                                               - │             
            │  Skills ─────────────────────────────────────────────────────────────── │             
            │  Review                                                               + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  / search · ←/→ details · i install · r refresh
